# SpiderDisco

./: .gitignore  CMakeLists.txt
data/: .directory  boom.flac  dead.flac  graodron.desktop  holy.flac  spiderdisco.desktop
data/icons/: icon.rc  spiderdisco.icns
data/intro/: 1.flac  10.flac  10a.flac  11.flac  1a.flac  2.flac  3.flac  4.flac  5.flac  6.flac  6a.flac  7.flac  7a.flac  8.flac  9.flac  9a.flac  music.flac
data/mask/: mask-0-1.ini  mask-0-2.ini  mask-0-3.ini  mask-0-4.ini  mask-0-5.ini  mask-1-0.ini  mask-1-1.ini  mask-1-2.ini  mask-1-3.ini  mask-1-4.ini  mask-1-5.ini  mask-10-0.ini  mask-10-1.ini  mask-10-2.ini  mask-10-3.ini  mask-10-4.ini  mask-10-5.ini  mask-11-0.ini  mask-11-1.ini  mask-11-2.ini  mask-11-3.ini  mask-11-4.ini  mask-11-5.ini  mask-12-0.ini  mask-12-1.ini  mask-12-2.ini  mask-12-3.ini  mask-12-4.ini  mask-12-5.ini  mask-13-0.ini  mask-13-1.ini  mask-13-2.ini  mask-13-3.ini  mask-13-4.ini  mask-13-5.ini  mask-14-0.ini  mask-14-1.ini  mask-14-2.ini  mask-14-3.ini  mask-14-4.ini  (+75 more)
data/oops/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/sprites/dron/: dance.ini
data/sprites/kula/: kula.ini
data/sprites/pajonczek/: dead.ini  stand.ini
src/: common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  disco.c  dosowisko.c  empty.c  holypangolin.c  intro.c  loading.c  outro.c  tutorial.c
